# PriceMonitor

./: README.md  browser_request_sender.py  build.py  config.json  main.py  pyproject.toml  test.py
api/: ozon_api.py
dto/: price_change.py  price_dto.py
migrations/: 001_crate_ozon_table.sql  001_ozon_price_table.sql  003_task_status.sql  004_migration_tracker.sql
models/: database.py  ozon_price.py
persistence/: ozon_price_db.py  parameters_db.py
service/: ozon_service.py  scheduler_service.py
src/: app.py  browser_request_sender.py  config.py
src/api/: ozon_api.py
src/dto/: item_dto.py  price_change.py
src/models/: database.py  ozon_price.py  parameters.py  task.py
src/persistence/: ozon_price_db.py  parameters_db.py  task_db.py
src/service/: ozon_service.py  scheduler_service.py
templates/: price_table.html  settings.html  task_table.html
templates/partials/: company_ids.html  cookies.html  price.html  report_path.html  scheduled_times.html  task.html
