[project]
name = "pricemonitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.0",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "playwright>=1.55.0",
    "pydantic>=2.11.9",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.43",
    "uvicorn==0.33.0",
]


[tool.cxfreeze]
executables = [
    {script = "main.py", target_name = "PriceMonitor"}
]

[tool.cxfreeze.build_exe]
include_files = [
    "templates/",
    "migrations/",
    "config.json",
    ".env"
]
includes = [
    "jinja2.ext",
    "apscheduler.triggers.cron",
    "apscheduler.triggers.interval",
    "aiosqlite",
    "uvicorn",
    "uvicorn.loops.auto",
    "uvicorn.protocols.http.auto",
    "uvicorn.protocols.websockets.auto",
    "uvicorn.lifespan"
]
excludes = [
    "tkinter",
    "test",
    "unittest"
]
packages = [
    "sqlalchemy.ext.asyncio",
    "aiosqlite",
    "uvicorn.loops",
    "uvicorn.protocols",
    "uvicorn.lifespan"
]
# For portable builds, we'll include everything
zip_include_packages = ["*"]
zip_exclude_packages = []
